mvc controller refactor and controller use load method to refactor

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
         <h1>Bienvenido a <%= title %>!!</h1>
         <p>Portal donde podrás crear tus juegos de preguntas y respuestas.</p>
         <p>
-            <a class="btn btn-primary btn-lg" href="/quizes/question">Comience a Jugar</a>
+            <a class="btn btn-primary btn-lg" href="/quizes">Comience a Jugar</a>
         </p>
     </div>
 </div>
