--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,7 @@
       </header>
       <nav>
         <span><a href="/">Inicio</a></span>
-        <span><a href="/quizes/question">Preguntas</a></span>
+        <span><a href="/quizes">Preguntas</a></span>
         <span><a href="/quizes/author">Créditos</a></span>
       </nav>
       <section class="main" id="s1">
