--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,1 +1,7 @@
-<%= respuesta %>
+<div class="row">
+    <div class="col-md-12">
+        <div class="jumbotron">
+            <h1><%= respuesta %></h1>
+        </div>
+    </div>
+</div>
