--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Preguntas</title>
-    <link rel="icon" href="favicon.ico" TYPE="image/x-icon">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-<body>
-  <div id="page-wrap">
-      <header class="main" id="h1">
-        <h2>Quiz: El juego de las preguntas</h2>
-      </header>
-      <nav>
-        <span><a href="/">Inicio</a></span>
-        <span><a href="/quizes">Preguntas</a></span>
-        <span><a href="/quizes/author">Créditos</a></span>
-      </nav>
-      <section class="main" id="s1">
-        <div>
-          <%- body %>
+    <head>
+        <title>Quiz: El juego de las preguntas</title>
+        <link rel="icon" href="favicon.ico" TYPE="image/x-icon">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+                <div class="navbar-header">
+                <a href="../" class="navbar-brand">Quiz: El juego de las preguntas</a>
+                </div>
+                <nav id="bs-navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="/">Inicio</a></li>
+                        <li><a href="/quizes">Preguntas</a></li>
+                        <li class="active"><a href="/quizes/author">Créditos</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="https://github.com/jorgemarcial/quiz" target="_blank">Proyecto Jorge Álvarez en Github</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <%- body %>
+            <footer class="main" id="f1">
+                <a href="https://github.com/jorgemarcial/quiz" target="_blank">Proyecto Jorge Álvarez en Github</a>
+            </footer>
         </div>
-      </section>
-      <footer class="main" id="f1">
-            <a href="https://github.com/jorgemarcial/quiz" target="_blank">Proyecto Jorge Álvarez en Github</a>
-      </footer>
-  </div>
-</body>
+    </body>
 </html>
