--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -18,5 +18,6 @@
             <% } %>
             </tbody>
         </table>
+        <!-- <a href="/quizes/new"><button>Crear pregunta</button></a> -->
     </div>
 </div>
