--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,6 +1,6 @@
 <label for="preg" class="rem">Pregunta:</label>
-<input type="text" class="form-control" id="preg" name="quiz[pregunta]" value="" placeholder="Pregunta"/> 
+<input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/> <p>
 <label for="resp" class="rem">Respuesta:</label>
-<input type="text" class="form-control" id="resp" name="quiz[respuesta]" value="" placeholder="Respuesta"/> 
+<input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/> <p>
 <a href="/quizes"><button type="button">Cancelar</button></a>
-<input class="btn btn-primary" type="submit" value="Salvar">
+<input type="submit" value="Salvar">
