feature tema in quizes

--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,6 +1,20 @@
+<div class="form-group">
 <label for="preg" class="rem">Pregunta:</label>
-<input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/> <p>
+<input class="form-control" type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/>
+</div>
+<div class="form-group">
 <label for="resp" class="rem">Respuesta:</label>
-<input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/> <p>
-<a href="/quizes"><button type="button">Cancelar</button></a>
-<input type="submit" value="Salvar">
+<input class="form-control" type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/> 
+</div>
+<div class="form-group">
+<label for="resp" class="rem">Tema:</label>
+<select class="form-control" name="quiz[tag]">
+	<option <%if  (quiz.tag == "otro") { %> selected <% } %>value="otro" selected>Otro</option>
+	<option <%if  (quiz.tag == "humanidades") { %> selected <% } %> value="humanidades">Humanidades</option>
+	<option <%if  (quiz.tag == "ocio") { %> selected <% } %> value="ocio">Ocio</option>
+	<option <%if  (quiz.tag == "ciencia") { %> selected <% } %> value="ciencia">Ciencia</option>
+	<option <%if  (quiz.tag == "tecnologia") { %> selected <% } %> value="tecnologia">Tecnología</option>
+</select>
+</div>
+<a href="/quizes"><button class="btn btn-warning">Cancelar</button></a>
+<button type="submit" class="btn btn-success">Salvar</button>
