--- a/views/quizes/edit.ejs
+++ b/views/quizes/edit.ejs
@@ -1,5 +1,8 @@
 Edite la pregunta 
-
-<form method="post" action="/quizes/<%= quiz.id %>?_method=put">      
-  <% include _form.ejs %>
-</form>
+<div class="row">
+    <div class="col-md-12">
+		<form method="post" action="/quizes/<%= quiz.id %>?_method=put">
+			<% include _form.ejs %>
+		</form>
+	</div>
+</div>
