--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -32,6 +32,6 @@
             <% } %> 
             </tbody>
         </table>
-        <a href="/quizes/new"><button>Crear pregunta</button></a>
+        <a href="/quizes/new"><button class="btn btn-primary">Crear pregunta</button></a>
     </div>
 </div>
