--- a/views/quizes/new.ejs
+++ b/views/quizes/new.ejs
@@ -1,7 +1,6 @@
-Añadir pregunta:
-
 <div class="row">
     <div class="col-md-12">
+    	<h1>Añadir pregunta:</h1>
 		<form method="post" action="/quizes/create">
 			<% include _form.ejs %>
 		</form>
