--- a/views/quizes/edit.ejs
+++ b/views/quizes/edit.ejs
@@ -1,6 +1,6 @@
-Edite la pregunta 
 <div class="row">
     <div class="col-md-12">
+    	<h1>Edite la pregunta</h1>
 		<form method="post" action="/quizes/<%= quiz.id %>?_method=put">
 			<% include _form.ejs %>
 		</form>
