--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -3,7 +3,9 @@
         <table class="table table-bordered table-hover" style="font-size: 36px;">
             <thead>
                 <tr>
-                    <th>Preguntas</th><th colspan="2">Acciones</th>
+                    <th>Preguntas</th>
+                    <th>Tag</th>
+                    <th colspan="2">Acciones</th>
                 </tr>
             </thead>
             <tbody>
@@ -11,8 +13,13 @@
                 <% var i; for (i=0; i < quizes.length ; i++) { %>
                 <tr>
                     <td>
-                        <a href="quizes/<%= quizes[i].id %>">
+                        <a href="/quizes/<%= quizes[i].id %>">
                             <%= quizes[i].pregunta %>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="/quizes/<%= quizes[i].id %>">
+                            <%= quizes[i].tag %>
                         </a>
                     </td>
                     <td>
