modifications for mod 9

--- a/views/quizes/author.ejs
+++ b/views/quizes/author.ejs
@@ -1,5 +1,10 @@
 <div class="row">
     <div class="col-md-12">
-		<%= author %>
-	</div>
+        <div class="jumbotron">
+            <h1> Desarrollo de servicios en la nube con HTML5, Javascript y node.js</h1>
+            <p>Ejercicio desarrollado por <a href="https://github.com/jorgemarcial/quiz">Jorge Marcial Álvarez</a> </p>
+            <img src="https://www.miriadax.net/image/layout_set_logo?img_id=12042" class="img-rounded"></img>
+
+        </div>
+    </div>
 </div>
