--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,12 +24,21 @@
                         <li class="active"><a href="/quizes/author">Créditos</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="https://github.com/jorgemarcial/quiz" target="_blank">Proyecto Jorge Álvarez en Github</a></li>
+                        <%if(!session.user){%>
+                            <li><a href="/login">Login</a></li>
+                        <%}else{%>
+                            <li><span style="padding-top: 15px;padding-bottom: 15px;line-height: 20px;position: relative;display: block;">
+                                    Welcome <%=session.user.username%>
+                                </span>
+                            </li>
+                            <li><a href="/logout">Logout</a></li>
+                        <%}%>
                     </ul>
                 </nav>
+                
             </header>
             <%- body %>
-            <footer class="top20">
+            <footer class="top20" style="margin-top:2%">
                 <a href="https://github.com/jorgemarcial/quiz" target="_blank">Proyecto Jorge Álvarez en Github</a>
             </footer>
         </div>
