--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -5,7 +5,9 @@
                 <tr>
                     <th>Preguntas</th>
                     <th>Tag</th>
-                    <th colspan="2">Acciones</th>
+                    <% if(session.user) { %> 
+                        <th colspan="2">Acciones</th>
+                    <% } %>
                 </tr>
             </thead>
             <tbody>
@@ -22,16 +24,18 @@
                             <%= quizes[i].tag %>
                         </a>
                     </td>
-                    <td>
-                        <a href="/quizes/<%= quizes[i].id %>/edit"><button> Editar </button></a>
-                    </td>
-                    <td>
-                        <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
-                            <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-                                borrar
-                            </button>
-                        </form>
-                    </td>
+                    <% if(session.user) { %> 
+                        <td>
+                            <a href="/quizes/<%= quizes[i].id %>/edit"><button> Editar </button></a>
+                        </td>
+                        <td>
+                            <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
+                                <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+                                    borrar
+                                </button>
+                            </form>
+                        </td>
+                    <% } %>
                 </tr>
                 <% } %>
             <% } else { %>
@@ -39,6 +43,8 @@
             <% } %> 
             </tbody>
         </table>
-        <a href="/quizes/new"><button class="btn btn-primary">Crear pregunta</button></a>
+        <% if(session.user) { %> 
+            <a href="/quizes/new"><button class="btn btn-primary">Crear pregunta</button></a>
+        <% } %>
     </div>
 </div>
